# baihe-autogui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_zh.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: conditional_flow.py  quick_start.py
scripts/: smoke_import.py
src/baihe_autogui/: __init__.py
src/baihe_autogui/core/: __init__.py  auto.py  element.py  exceptions.py  gui.py  overlay.py  target.py  types.py
tests/: test_auto.py  test_element.py  test_matching_regression.py  test_overlay.py  test_public_api.py  test_target.py  test_types.py
