[project]
name = "baihe-autogui"
version = "0.1.0"
description = "A small GUI automation wrapper around pyautogui with a simple Auto -> Element -> Target flow"
readme = "README.md"
authors = [
    { name = "jiangbaihe", email = "baiheqiuhan@qq.com" }
]
requires-python = "==3.8.*"
dependencies = [
    "pyautogui>=0.9.54",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.15,<0.16",
]

[project.scripts]
baihe-autogui = "baihe_autogui:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
