[project]
name = "baihe-autogui"
version = "0.1.4"
description = "A small GUI automation wrapper around pyautogui with a simple Auto -> Element -> Target flow"
readme = "README.md"
keywords = ["automation", "gui", "pyautogui", "desktop", "testing"]
authors = [
    { name = "jiangbaihe", email = "baiheqiuhan@qq.com" }
]
requires-python = "==3.8.*"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "opencv-python>=4.13.0.92",
    "pyautogui>=0.9.54",
]

[project.urls]
Homepage = "https://github.com/jiangbaihe/baihe-autogui"
Repository = "https://github.com/jiangbaihe/baihe-autogui"
Issues = "https://github.com/jiangbaihe/baihe-autogui/issues"
Changelog = "https://github.com/jiangbaihe/baihe-autogui/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.15,<0.16",
]

[project.scripts]
baihe-autogui = "baihe_autogui:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
